@@ -1,3 +1,7 @@
+2010-08-20  MIYAMUKO Katsuyuki
+
+	* api/gist-unofficial.l (gist-get): gist-get を導入してリファクタリング
+
 2010-08-19  MIYAMUKO Katsuyuki
 
 	* api/types.l (gist-public-clone-url, gist-private-clone-url gist-embed-js-url):
